RESOLVED FIXED 216279
Fix precision issues in AudioParamTimeline when event times are very close
https://bugs.webkit.org/show_bug.cgi?id=216279
Summary Fix precision issues in AudioParamTimeline when event times are very close
Chris Dumez
Reported 2020-09-08 11:49:16 PDT
Fix precision issues in AudioParamTimeline when event times are very close.
Attachments
Patch (1.26 MB, patch)
2020-09-08 11:57 PDT, Chris Dumez
no flags
Patch (1.26 MB, patch)
2020-09-08 12:11 PDT, Chris Dumez
no flags
Patch (1.30 MB, patch)
2020-09-08 12:42 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-09-08 11:57:09 PDT
Darin Adler
Comment 2 2020-09-08 12:06:28 PDT
Comment on attachment 408250 [details] Patch I see that the code involves a lot of floating point division. Last time I checked, I believe floating point multiplication was significantly faster. Perhaps we can make some of this division be multiplication by calculating a reciprocal or by reorganizing expressions. Or perhaps this kind of micro-optimization thinking is not relevant to this code. r=me assuming the tests pass
Chris Dumez
Comment 3 2020-09-08 12:11:35 PDT
Chris Dumez
Comment 4 2020-09-08 12:42:59 PDT
EWS
Comment 5 2020-09-08 13:24:38 PDT
Committed r266746: <https://trac.webkit.org/changeset/266746> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408255 [details].
Radar WebKit Bug Importer
Comment 6 2020-09-08 13:25:28 PDT
Note You need to log in before you can comment on or make changes to this bug.