Fix precision issues in AudioParamTimeline when event times are very close https://bugs.webkit.org/show_bug.cgi?id=216279

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/audioparam-close-expected.txt:
Rebaseline test that is now passing.

* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/audioparam-exponentialRampToValueAtTime-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/audioparam-linearRampToValueAtTime-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-panner-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/panner-automation-position-expected.txt:
Rebaseline tests whose output has changed very slightly.

Source/WebCore:

Fix precision issues in AudioParamTimeline when event times are very close. To achieve this,
AudioParamTimeline::valuesForTimeRange() now uses frames for the range instead of time.
frames have the benefit of being more exact.

This change is based on audio_param_timeline.cc from Blink:
- https://github.com/chromium/chromium/blob/master/third_party/blink/renderer/modules/webaudio/audio_param_timeline.cc

No new tests, rebaselined existing test.

* Modules/webaudio/AudioParam.cpp:
(WebCore::AudioParam::calculateTimelineValues):
* Modules/webaudio/AudioParamTimeline.cpp:
(WebCore::AudioParamTimeline::valueForContextTime):
(WebCore::AudioParamTimeline::valuesForTimeRange):
(WebCore::AudioParamTimeline::valuesForTimeRangeImpl):
(WebCore::AudioParamTimeline::isEventCurrent const):
* Modules/webaudio/AudioParamTimeline.h:

LayoutTests:

Rebaseline tests whose output has changed very slightly.

* webaudio/audioparam-cancel-and-hold-expected.txt:
* webaudio/oscillator-custom-expected.wav:
* webaudio/oscillator-sawtooth-expected.wav:
* webaudio/oscillator-square-expected.wav:
* webaudio/oscillator-triangle-expected.wav:


Canonical link: https://commits.webkit.org/229111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266746 268f45cc-cd09-0410-ab3c-d52691b4dbfc